--- a/src/pages/Task/Task.css
+++ b/src/pages/Task/Task.css
@@ -9,14 +9,17 @@
 
 .time {
     font-size: 8rem;
+    font-weight: bold;
+    
 }
 
 .message {
-    font-size: 4rem;
+    font-size: 6rem;
+    
 }
 
 .focus-question {
-    font-size: 2rem;
+    font-size: 3rem;
     padding-bottom: 10px;
 }
 
@@ -51,9 +54,14 @@
 .todo-btn-container {
     right: 2rem;
     bottom: 3.5rem;
+    padding: 8px 15px;
+    background-color: white;
+    border-radius: 20px;
 }
 
 .todo-btn {
     font-size: 2rem;
+    font-weight: 400;
+    color: black;
 }
 
